src/components/List/List.module.scss
@use 'base';
@use 'component';

@use './List';

@include component.define(List, List.$vars) {
    .root {
        list-style: none;
        display: flex;
        flex-direction: column;
        margin: 0;
        padding: 0;
        gap: component.var(gap);
        overflow: hidden;
    }

    @include component.gaps((
        s: base.var(space-xxs),
        m: base.var(space-xs),
        l: base.var(space-s)
    ));
}

